# exp-trk_deprecated

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg  test2.py
doc/: Documentation.md
docs/: Folder Iterator Doc.md  Setup Doc.md  class_sample.md
docs/Classes/: Welcome_Window_Doc.md
src/: __init__.py  algos.py  const.py  setup.py  vars.py
src/Templates/: Home.py  Welcome.py
src/Templates/Admin/: Admin_Login.py  Admin_Window.py  Change_User_Infos.py
src/Templates/Expense/: Add_Expense.py  Delete_Expense.py  Home_Expense.py
src/Templates/Export/: Export_Window.py
src/Templates/Login/: Login_Screen.py  New_User.py  security.py  test.py
src/Templates/Passive/: Passive_Income.py  check_transmission.py
src/Templates/Passive_Expense/: Passive_Expense.py  check_transfer.py
src/Templates/Passive_Income/: Passive_Income.py  check_transfer.py
src/Templates/Plot/: Math.py  Plot_Window.py  Plotter.py
src/Templates/Profile_Stats/: Calc_Stats.py  Statisitic_Window.py
src/Templates/Revenue/: Add_Revenue.py  Delete_Revenue.py  Home_Income.py
src/Templates/Settings/: Change_User_Infos.py  Delete_Passive.py  Settings_Window.py
src/Templates/Transfer/: Transfer_Window.py
src/templates/Plot/: Calculations.py
