[metadata]
name = exptrk
version = 3.0.0
author = Leonard Becker
description = GUI App for expense tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jolumine/exp-trk
keywords = expense, tracker, gui, python
license = MIT
license_files = LICENSE


[options]
python_requires = >=3.7, <4
packages = find:
include_package_data = True 


